Added the contact form
Added the contact form the styling and the other functionalities are yet to be added

--- a/index.html
+++ b/index.html
@@ -54,15 +54,21 @@
             <ul>
                 <li>
                     <span>2014 - 2018</span>
-                    <div id="li-1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Amet vulputate tristique quam felis. Id phasellus dui orci vulputate consequat nulla proin. Id sit scelerisque neque, proin bibendum diam.</div>
+                    <div id="li-1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Amet vulputate tristique
+                        quam felis. Id phasellus dui orci vulputate consequat nulla proin. Id sit scelerisque neque,
+                        proin bibendum diam.</div>
                 </li>
                 <li>
                     <span>2014 - 2018</span>
-                    <div id="li-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Amet vulputate tristique quam felis. Id phasellus dui orci vulputate consequat nulla proin. Id sit scelerisque neque, proin bibendum diam.</div>
+                    <div id="li-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Amet vulputate tristique
+                        quam felis. Id phasellus dui orci vulputate consequat nulla proin. Id sit scelerisque neque,
+                        proin bibendum diam.</div>
                 </li>
                 <li>
                     <span>2014 - 2018</span>
-                    <div id="li-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Amet vulputate tristique quam felis. Id phasellus dui orci vulputate consequat nulla proin. Id sit scelerisque neque, proin bibendum diam.</div>
+                    <div id="li-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Amet vulputate tristique
+                        quam felis. Id phasellus dui orci vulputate consequat nulla proin. Id sit scelerisque neque,
+                        proin bibendum diam.</div>
                 </li>
             </ul>
         </div>
@@ -71,22 +77,50 @@
 
         <div class="skills1">
             <div class="skills-item">
-                <img width="50px"   src="images/svg/instagram.svg" alt="">
+                <img width="50px" src="images/svg/instagram.svg" alt="">
                 <div id="p">HTML</div>
             </div>
             <div class="skills-item">
-                <img width="50px"   src="images/svg/instagram.svg" alt="">
-                <div id="p">HTML</div>
+                <img width="50px" src="images/svg/instagram.svg" alt="">
+                <div id="p">CSS</div>
             </div>
             <div class="skills-item">
-                <img width="50px"   src="images/svg/instagram.svg" alt="">
-                <div id="p">HTML</div>
+                <img width="50px" src="images/svg/instagram.svg" alt="">
+                <div id="p">JS[Learning]</div>
             </div>
         </div>
     </main>
-
+<span id="main1">Contact.</span>
     <footer>
-        <span id="main1">Contact.</span>
+        
+
+        <div class="footer-main">
+
+            <div id="form">
+
+                <label for="frstname">First Name</label><br>
+                <input type="text" id="frstname" placeholder="Your First Name"><br>
+
+                <label for="lstname">Last Name</label><br>
+                <input type="text" id="lstname" placeholder="Your Last Name"><br>
+
+                <label for="gmail">Last Name</label><br>
+                <input type="text" id="gmail" placeholder="Your Gmail Address"><br>
+
+                <label for="txtarea">Write Your Message Below!</label><br>
+                <textarea name="txt" id="txtarea" placeholder="Write Your Message Here!"></textarea><br>
+
+                <button type="submit" id="main-submit">Submit</button>
+               
+            </div>
+
+            <div class="discussion">
+                <h1 id="h11">Let's</h1>
+                <h1 id="h12">Discuss</h1>
+                <h1 id="h13">Your Projects!.....</h1>
+            </div>
+
+        </div>
     </footer>
 </body>
 
