--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
             </ul>
 
             <div>
-                <span><a href="https://www.instagram.com/theonly.abhijith/" target="_blank"><img width="25px" src="images/svg/insta-svg.svg" alt="instagram" /></a></span>
-                <span><a href="https://github.com/AbhijithX0" target="_blank"><img width="25px" src="images/svg/githb-svg.svg" alt="Github" /></a></span>
-                <span><a href="https://www.linkedin.com/in/abhijith-binu-b27649300/"><img width="25px" src="images/svg/linkedd-in-svg.svg" alt="LinkedIn" /></a></span>
+                <span><a href="https://www.instagram.com/theonly.abhijith/" target="_blank" rel="noopener"><img width="25px" src="images/svg/insta-svg.svg" alt="instagram" /></a></span>
+                <span><a href="https://github.com/AbhijithX0" target="_blank" rel="noopener"><img width="25px" src="images/svg/githb-svg.svg" alt="Github" /></a></span>
+                <span><a href="https://www.linkedin.com/in/abhijith-binu-b27649300/" rel="noopener"><img width="25px" src="images/svg/linkedd-in-svg.svg" alt="LinkedIn" /></a></span>
             </div>
         </nav>
     </header>
@@ -98,8 +98,8 @@ My aspiration is to become a proficient front-end developer, capable of deliveri
 
         <span class="main1" id="works">Works.</span>
         <div class="works">
-            <a href="https://github.com/AbhijithX0" target="_blank"><img src="images/svg/githb-svg.svg" alt="github"></a>
-            <h1><a href="https://github.com/AbhijithX0" target="_blank">Click Me ;)</a></h1>
+            <a href="https://github.com/AbhijithX0" target="_blank" rel="noopener"><img src="images/svg/githb-svg.svg" alt="github"></a>
+            <h1><a href="https://github.com/AbhijithX0" target="_blank" rel="noopener">Click Me ;)</a></h1>
         </div>
     </main>
     <span class="main1" id="connect">Let's Connect.</span>
